[package]
name = "rsbmallocc"
version = "0.2.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/AWBroch/binned-alloc-rs"
categories = ["memory-management"]
keywords = ["allocator", "no_std", "binned_allocator", "c_bindings"]

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsbmalloc = {path = "../rust-alloc"}

[features]
default = ["std"]
std = ["rsbmalloc/std"]
